# source_ocr

./: README.md
module1/: CMakeLists.txt  sample1.cpp
module2/: sample1.cpp
module3/: .cproject  .project  ExtractSingleText.cpp  ExtractSingleText.h  RecognizeLP.cpp  RecognizeLP.h  test.cpp  test2.cpp
module4/: DetectLP.cpp  ExtractSingleText.cpp  ExtractSingleText.h  RecognizeLP.cpp  RecognizeLP.h  test.cpp  test2.cpp
module7/: DetectLP.cpp  DetectLP.h  ExtractSingleText.cpp  ExtractSingleText.h  RecognizeLP.cpp  RecognizeLP.h  test.cpp  test2.cpp
module8/: DetectLP.cpp  DetectLP.h  ExtractSingleText.cpp  ExtractSingleText.h  RecognizeLP.cpp  RecognizeLP.h  test.cpp
